# PyFEX

./: .gitattributes  README.md
Dataset/adgame-7.69/: README.md  pyproject.toml
Dataset/adv2099m-1.0.0/: PKG-INFO
Dataset/adv2099m3-1.0.0/: PKG-INFO
Dataset/aiohttp-proxy-connect-0.4.2/: README.md
Dataset/aiohttp_async_proxy-0.1.72/: PKG-INFO  README.md
Dataset/aiohttp_async_proxy-0.1.73/: PKG-INFO
Dataset/aiohttp_async_socks-0.1.75/: PKG-INFO  README.md
Dataset/aiohttp_proxies_connector-0.2.11/: PKG-INFO
Dataset/aiohttp_proxies_connector-0.2.12/: PKG-INFO
Dataset/aiohttp_proxies_connector-0.2.13/: PKG-INFO
Dataset/aiohttp_proxies_connector-0.2.14/: PKG-INFO
Dataset/aiohttp_proxies_connector-0.2.15/: PKG-INFO
Dataset/aiohttp_proxies_connector-0.2.17/: PKG-INFO
Dataset/aiohttp_proxies_connector-0.2.18/: PKG-INFO
Dataset/aiohttp_proxies_connector-0.2.19/: PKG-INFO
Dataset/bhottwo-1.4/: PKG-INFO  (+1 more)
Dataset/pywinrequest-1.0.1/: PKG-INFO  pyproject.toml
Dataset/security-util-py-0.0.3/: PKG-INFO  README.md  pyproject.toml
Dataset/security-util-py-0.0.3/security_util_py.egg-info/: SOURCES.txt  top_level.txt
PyFEX-core/: Makefile.pre.in  README.md
artifact_eval/: audit_sample_logs.py  prepare_calibrated_samples.py  run_artifact_tests.py  run_one_calibrated_sample.py  run_pyfex_program.py  simplify_behavior_trace.py  summarize_dfa_coverage.py
samples_usage/: 01_forced_execution.py  02_crash_recovery.py  03_branch_merging.py  04_dormant_function_analysis.py  05_dummy_provenance.py  README.md  run.sh
tests/: README.md
tools/: dfa_driver.py
(+2309 files in other folders)
